--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
         "symfony/yaml": "2.*"
     },
     "autoload": {
-        "psr-0": {"": "src/"}
+        "classmap": [
+            "entity/",
+            "model/",
+            "controller/",
+            "component/"
+        ]
     }
 }
