--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "doctrine/orm": "2.4.*",
-        "symfony/yaml": "2.*"
+        "symfony/yaml": "2.*",
+        "evenement/evenement": "2.0.*"
     },
     "autoload": {
         "classmap": [
