--- a/package.json
+++ b/package.json
@@ -26,18 +26,29 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.23.0",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-loader": "^1.7.0",
     "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.7.1",
     "imports-loader": "^0.7.1",
+    "jquery": "^2.2.4",
+    "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
+    "postcss-loader": "^1.3.3",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.7.1",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "blueimp-file-upload": "^9.17.0",
+    "bootstrap": "^3.3.7",
     "chosen-npm": "^1.4.2",
     "colorpicker-amin": "^1.2.1",
     "datatables": "^1.10.13",
