--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.3.3",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.7.1",
