--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.3.3",
+    "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
