--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.3.3",
+    "react-bootstrap-switch": "^15.0.4",
+    "react-file-input": "^0.2.5",
     "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
+    "react-select2-wrapper": "^1.0.4-beta3",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.0",
