--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.7.1",
+    "guid": "0.0.12",
     "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.4",
