--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jstable": "^2.0.5",
     "jstree": "^3.3.3",
     "react": "^15.4.2",
+    "react-circular-progressbar": "^0.1.3",
     "react-dom": "^15.4.2"
   }
 }
