--- a/package.json
+++ b/package.json
@@ -71,8 +71,11 @@
     "jquery-ui": "^1.12.1",
     "jstable": "^2.0.5",
     "jstree": "^3.3.3",
+    "lodash.constant": "^3.0.0",
+    "lodash.isinteger": "^4.0.4",
     "react": "^15.4.2",
     "react-circular-progressbar": "^0.1.3",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "uuid": "^3.0.1"
   }
 }
