--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "blueimp-file-upload": "^9.17.0",
     "bootstrap": "^3.3.7",
+    "chosen-js": "^1.7.0",
     "colorpicker-amin": "^1.2.1",
     "datatables": "^1.10.13",
     "flot-charts": "^0.8.3",
