--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+RewriteEngine On
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+RewriteRule ^ - [L]
+
+RewriteRule ^ /index.php [L]
+
 php_value upload_max_filesize 64M
 php_value post_max_size 64M
 php_value max_execution_time 400
