--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Flight data processor. Initialy was developed for An 148, but got wide spread for many other aircrafts",
   "main": "index.js",
   "scripts": {
@@ -79,6 +79,7 @@
     "react": "^15.4.2",
     "react-circular-progressbar": "^0.1.3",
     "react-dom": "^15.4.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "uuid": "^3.0.1"
   }
 }
