--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.isinteger": "^4.0.4",
     "react": "^15.4.2",
+    "react-bootstrap-slider": "^2.0.0",
     "react-circular-progressbar": "^0.1.3",
     "react-dom": "^15.4.2",
     "react-redux-i18n": "^1.8.0",
