--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Flight data processor. Initialy was developed for An 148, but got wide spread for many other aircrafts",
   "main": "index.js",
   "scripts": {
+    "start" : "webpack-dev-server",
     "build": "webpack -p",
     "watch": "webpack --watch",
     "lint:js": "eslint frontend/ webpack.*.js --cache",
@@ -57,9 +58,9 @@
     "style-loader": "^0.7.1",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
+    "webpack": "^2.6.1",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dev-server": "^2.4.4"
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -79,6 +80,7 @@
     "react-bootstrap-slider": "^2.0.0",
     "react-circular-progressbar": "^0.1.3",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux-i18n": "^1.8.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux-auth-wrapper": "^1.1.0",
