--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Flight data processor. Initialy was developed for An 148, but got wide spread for many other aircrafts",
   "main": "index.js",
   "scripts": {
-    "start" : "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack -p",
     "watch": "webpack --watch",
     "lint:js": "eslint frontend/ webpack.*.js --cache",
@@ -79,7 +79,9 @@
     "react": "^15.4.2",
     "react-bootstrap-slider": "^2.0.0",
     "react-circular-progressbar": "^0.1.3",
+    "react-collapse": "^4.0.2",
     "react-dom": "^15.4.2",
+    "react-expandable-listview": "^0.6.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux-i18n": "^1.8.0",
     "react-router-redux": "^5.0.0-alpha.6",
