--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,14 @@ RewriteEngine On
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
-
 RewriteRule ^ /index.php [L]
+#RewriteLog %{DOCUMENT_ROOT}%/log/rewrite.log
+#RewriteLogLevel 3
+
+Options Indexes Includes
+AllowOverride All
+Order allow,deny
+Allow from all
 
 php_value upload_max_filesize 64M
 php_value post_max_size 64M
