--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^15.4.2",
     "react-expandable-listview": "^0.6.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-motion": "^0.5.0",
     "react-redux-i18n": "^1.8.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux-auth-wrapper": "^1.1.0",
