--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luch",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Flight data processor. Initialy was developed for An 148, but got wide spread for many other aircrafts",
   "main": "index.js",
   "scripts": {
@@ -40,7 +40,6 @@
     "guid": "0.0.12",
     "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.4",
     "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.3.3",
@@ -68,10 +67,8 @@
     "datatables": "^1.10.13",
     "flot-charts": "^0.8.3",
     "history": "^4.6.1",
-    "jquery": "^2.1.1",
+    "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
-    "jstable": "^2.0.5",
-    "jstree": "^3.3.3",
     "lodash.constant": "^3.0.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isinteger": "^4.0.4",
@@ -87,6 +84,7 @@
     "react-redux-i18n": "^1.8.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-sortable-tree": "^0.1.19",
+    "react-table": "^6.4.0",
     "redux-auth-wrapper": "^1.1.0",
     "uuid": "^3.0.1"
   }
