--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "luch",
-  "version": "1.0.3",
+  "name": "luche",
+  "version": "1.0.4",
   "description": "Flight data processor. Initialy was developed for An 148, but got wide spread for many other aircrafts",
   "main": "index.js",
   "scripts": {
@@ -48,6 +48,7 @@
     "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
     "react-select2-wrapper": "^1.0.4-beta3",
+    "react-hot-loader": "^3.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.0",
@@ -66,20 +67,25 @@
     "chosen-js": "^1.7.0",
     "datatables": "^1.10.13",
     "flot-charts": "^0.8.3",
+    "has-flag": "^2.0.0",
     "history": "^4.6.1",
+    "is-utf8": "^0.2.1",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
+    "lodash": "^4.17.4",
+    "lodash._baseassign": "^3.2.0",
+    "lodash._createassigner": "^3.1.1",
     "lodash.constant": "^3.0.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isinteger": "^4.0.4",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.10",
+    "rc-collapse": "^1.7.6",
+    "react": "^15.6.1",
     "react-bootstrap-slider": "^2.0.0",
-    "react-circular-progressbar": "^0.1.4",
+    "react-circular-progressbar": "^0.1.5",
     "react-collapse": "^4.0.2",
     "react-color": "^2.11.7",
     "react-dom": "^15.4.2",
-    "react-expandable-listview": "^0.6.0",
-    "react-hot-loader": "^3.0.0-beta.7",
     "react-motion": "^0.5.0",
     "react-redux-i18n": "^1.8.0",
     "react-router-redux": "^5.0.0-alpha.6",
