--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "lodash.constant": "^3.0.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isinteger": "^4.0.4",
+    "object-to-formdata": "^1.0.12",
     "prop-types": "^15.5.10",
     "rc-collapse": "^1.7.6",
     "react": "^15.6.1",
