--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-sortable-tree": "^0.1.19",
     "react-table": "^6.4.0",
+    "react-validation": "^2.10.9",
     "redux-auth-wrapper": "^1.1.0",
     "uuid": "^3.0.1"
   }
