--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "webpack-dev-server",
     "build": "webpack -p",
     "watch": "webpack --watch",
-    "lint:js": "eslint frontend/ webpack.*.js --cache",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:js": "eslint front/ webpack.*.js --cache",
+    "test": "mocha-webpack --webpack-config webpack.config-test.babel.js 'front/**/*.spec.js'"
   },
   "repository": {
     "type": "git",
@@ -32,35 +32,44 @@
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.27.3",
+    "enzyme": "^2.9.1",
     "eslint": "^3.18.0",
     "eslint-loader": "^1.7.0",
     "eslint-plugin-react": "^6.10.3",
+    "expect": "^21.1.0",
+    "expect-jsx": "^4.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.7.1",
     "guid": "0.0.12",
     "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.1",
+    "mocha": "^3.5.3",
+    "mocha-webpack": "^0.7.0",
     "node-sass": "^4.5.1",
     "npm-install-webpack-plugin": "^4.0.4",
+    "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
-    "react-bootstrap-switch": "^15.5.0",
+    "react-bootstrap-switch": "^15.5.1",
     "react-file-input": "^0.2.5",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
     "react-select2-wrapper": "^1.0.4-beta3",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.3",
+    "source-map-support": "^0.4.18",
     "style-loader": "^0.7.1",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "url-loader": "^0.5.8",
-    "webpack": "^2.6.1",
+    "webpack": "^2.7.0",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
