--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack -p",
-    "watch": "webpack --watch",
+    "watch": "cross-env NODE_ENV=dev webpack --watch",
     "lint:js": "eslint front/ webpack.*.js --cache",
-    "test": "mocha-webpack --webpack-config webpack.config-test.babel.js 'front/**/*.spec.js'"
+    "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config webpack.config-test.babel.js 'front/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -74,6 +74,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chosen-js": "^1.7.0",
+    "cross-env": "^5.0.5",
     "datatables": "^1.10.13",
     "event-emitter": "^0.3.5",
     "flot-charts": "^0.8.3",
