i18n vendor lib add

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Thumbs.db
 .tmp
 
 # composer vendor dir
-# /vendor
+/vendor
 /node_modules
 package-lock.json
 
@@ -34,7 +34,7 @@ phpunit.phar
 /phpunit.xml
 
 #config
-/back/config/db.php
+/back/config/db*.php
 
 #log
 /log
