--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "lodash._createassigner": "^3.1.1",
     "lodash.constant": "^3.0.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.isfunction": "^3.0.8",
     "lodash.isinteger": "^4.0.4",
     "moment": "^2.18.1",
     "object-to-formdata": "^1.0.12",
