--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "form-urlencoded": "^2.0.0",
     "has-flag": "^2.0.0",
     "history": "^4.6.1",
+    "howler": "^2.0.9",
     "is-utf8": "^0.2.1",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
