--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "klein/klein": "^2.1",
         "mustache/mustache": "^2.12",
         "philipp15b/php-i18n": "dev-master",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "predis/predis": "^2.0@dev"
     },
     "autoload": {
         "classmap": [
