--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "doctrine/orm": "2.4.*",
         "symfony/yaml": "2.*",
@@ -21,7 +22,8 @@
         "mustache/mustache": "^2.12",
         "philipp15b/php-i18n": "dev-master",
         "guzzlehttp/guzzle": "^6.2",
-        "predis/predis": "^2.0@dev"
+        "predis/predis": "^2.0@dev",
+        "phpoffice/phpspreadsheet": "^1.2"
     },
     "autoload": {
         "classmap": [
