composer.json name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "AT/luche",
+    "name": "realtimespace/luche",
     "description": "Flight data processor",
     "type": "project",
     "license": "MIT",
